Added php handler to httpd.conf, replaced adduser with usermod to run on RedHat systems

--- a/image_scripts/httpd.conf
+++ b/image_scripts/httpd.conf
@@ -302,6 +302,11 @@ LogLevel warn
     # To parse .shtml files for server-side includes (SSI):
     # (You will also need to add "Includes" to the "Options" directive.)
     #
+    
+    #PHP
+    AddHandler php5-script php
+    AddType application/x-httpd-php .php
+
     AddType text/html .shtml
     AddOutputFilter INCLUDES .shtml
 </IfModule>
